--- a/components/BlogNav/BlogNav.module.css
+++ b/components/BlogNav/BlogNav.module.css
@@ -34,7 +34,11 @@
   color: white;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
+  .body {
+    height: 100px;
+    height: 80px;
+  }
   .body .title h4 {
     font-size: 0.8rem;
   }
