--- a/components/BlogNav/BlogNav.module.scss
+++ b/components/BlogNav/BlogNav.module.scss
@@ -40,8 +40,12 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
+  // @media screen and (max-width: 768px) {
   .body {
+    height: 100px;
+    height: 80px;
+
     .title {
       h4 {
         font-size: 0.8rem;
