--- a/components/BlogNav/BlogNav.module.scss
+++ b/components/BlogNav/BlogNav.module.scss
@@ -30,10 +30,12 @@
     h4 {
       margin: 0;
       color: white;
+      font-size: 1rem; //🔥🔥🔥
     }
 
     h1 {
-      font-size: 2rem;
+      font-size: 2.3rem; //🔥🔥🔥
+
       margin: 0;
       color: white;
     }
@@ -48,11 +50,11 @@
 
     .title {
       h4 {
-        font-size: 0.8rem;
+        font-size: 0.8rem; //🔥🔥🔥
       }
 
       h1 {
-        font-size: 1.6rem;
+        font-size: 1.8rem; //🔥🔥🔥
       }
     }
   }
