--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -471,11 +471,11 @@
     flex-wrap: wrap;
   }
   .body .navSection ul li {
-    width: calc(33% - 2.5rem);
-    margin: 0 0 1rem 2.5rem;
+    width: calc(33% - 2rem);
+    margin: 0 0 1rem 2rem;
   }
   .body .navSection ul li a {
-    font-size: 0.9rem;
+    font-size: 1rem;
     width: 100%;
   }
 }
@@ -550,15 +550,16 @@
   .body .navSection {
     height: 130px;
     top: 210px;
-    padding: 2rem 2rem 1rem;
+    padding: 2rem 2rem 1.5rem;
   }
   .body .navSection ul li {
     width: calc(50% - 2.5rem);
     margin: 0 0 1rem 2.5rem;
   }
   .body .navSection ul li a {
-    font-size: 0.9rem;
+    font-size: 1rem;
     width: 100%;
+    padding: 0.8rem 0.4rem;
   }
 }
 @media screen and (max-width: 570px) {
@@ -580,7 +581,7 @@
     margin: 0 0 1rem 1rem;
   }
   .body .navSection ul li a {
-    font-size: 0.85rem;
+    font-size: 0.95rem;
     width: 100%;
   }
 }
@@ -589,7 +590,7 @@
     padding: 1.5rem 2rem 1rem;
   }
   .body .navSection ul li {
-    width: calc(100% - 0rem);
+    width: calc(100% - 2rem);
     margin: 0 0 1rem 2rem;
   }
   .body .navSection ul li a {
@@ -599,11 +600,11 @@
 }
 @media screen and (max-width: 480px) {
   .body main {
-    height: calc(100vh - 310px);
-    margin-top: 100px;
+    height: calc(100vh - 290px);
+    margin-top: 80px;
   }
   .body main .mainSection {
-    height: calc(100vh - 310px);
+    height: calc(100vh - 290px);
   }
   .body main .mainSection .sectionTitle {
     padding: 1rem 2rem 1rem;
@@ -612,10 +613,10 @@
     font-size: 1.3rem;
   }
   .body main .mainSection .articleSection {
-    height: calc(100vh - 370px);
+    height: calc(100vh - 350px);
   }
   .body main .mainSection .articleSection .outLine {
-    min-height: calc(100vh - 420px);
+    min-height: calc(100vh - 400px);
   }
   .body main .mainSection .articleSection .outLine .articleBox .articleItem {
     width: 100%;
@@ -651,13 +652,13 @@
   .body .navSection {
     padding: 1.5rem 2rem 1rem;
     top: 180px;
-    height: 130px;
+    height: 110px;
   }
   .body .navSection .navSectionTitle .title h1 {
     font-size: 1.3rem;
   }
   .body .navSection ul li {
-    width: calc(100% - 0rem);
+    width: calc(100% - 2rem);
     margin: 0 0 1rem 2rem;
   }
   .body .navSection ul li a {
@@ -671,15 +672,15 @@
     height: 170px;
   }
   .body .navSection ul li {
-    width: calc(100% - 0rem);
-    margin: 0 0 1rem 1rem;
+    width: calc(100% - 2rem);
+    margin: 0 0 1rem 2rem;
   }
   .body .navSection ul li a {
-    font-size: 0.95rem;
-    width: 100%;
+    font-size: 0.9rem;
+    width: 80%;
   }
 }
-@media screen and (max-width: 372px) {
+@media screen and (max-width: 370px) {
   .body main .mainSection .articleSection .outLine .articleBox .articleItem .sentenceBox .moreButtonBox {
     flex-direction: column;
   }
@@ -688,16 +689,16 @@
     margin-bottom: 1rem;
   }
   .body main .mainSection .articleSection .outLine .articleBox .articleItem .imageBox {
-    width: 210px;
-    height: 140px;
+    width: 225px;
+    height: 150px;
   }
   .body .navSection ul li {
-    width: calc(100% - 0rem);
+    width: calc(100% - 1rem);
     margin: 0 0 1rem 1rem;
   }
   .body .navSection ul li a {
     font-size: 0.85rem;
-    width: 100%;
+    width: 90%;
   }
 }
 /*# sourceMappingURL=blog.module.css.map */
