800pxからのmoreButtonのmargin-bottom:1remを廃止した

--- a/styles/blog.module.scss
+++ b/styles/blog.module.scss
@@ -642,7 +642,7 @@
                   // border: 5px solid red;
                   width: 100%;
                   min-height: auto;
-                  margin-bottom: 1rem;
+                  // margin-bottom: 1rem;
 
                   .items {
                     // border: 5px solid blue;
